deploy/kubernetes/service.yaml
# Templat layanan untuk penerapan Kubernetes di folder ini.
apiVersion: v1
kind: Service
metadata:
    name: tenrusl-instagram-api
spec:
    selector:
        app: tenrusl-instagram-api
    ports:
        - port: 80
          targetPort: 3000
